TacticScopeTool/Backend/Parsers/performance/src/performanceParser.jj
options {
  static = true;
}

PARSER_BEGIN(PerformanceTacticParser)
import java.io.InputStreamReader;
import java.io.InputStream;
import java.util.ArrayList;
import java.util.List;
import java.text.ParseException;

public class PerformanceTacticParser {
  
  	private InputStreamReader inputReader; 
  	public boolean tacticFound;
  	public boolean CorrectSyntax;
  	public String resultOccurrences = "";

   //Call class that saves caller method and callee of each method
  	private static class CallRelationship {
        String caller;
        String callee;
        String method;
        
        public CallRelationship(String caller, String callee, String method) {
            this.caller = caller;
            this.callee = callee;
            this.method = method;
        }
        
        
        public boolean isSelfCall() {
            return caller.equals(callee);
        }
    }

    //Occurrence list that saves all entities, start and pattern of each occurrence of the tactic    
	public static class Occurrence {
          String ClientEntity;
          String MgrEntity;
          String CacheEntity;
          String RepoEntity;
          int startPosition;
          List<CallRelationship> PatternCalls;

          public Occurrence( String ClientEntity, String MgrEntity, String CacheEntity, String RepoEntity, int startPosition, List<CallRelationship> PatternCalls) {
               this.ClientEntity = ClientEntity;
               this.MgrEntity = MgrEntity;
               this.CacheEntity = CacheEntity;
               this.RepoEntity = RepoEntity;
               this.startPosition = startPosition;
               this.PatternCalls = new ArrayList<>(PatternCalls);
               
          }

          public Occurrence( String ClientEntity, String MgrEntity, String CacheEntity, int startPosition, List<CallRelationship> PatternCalls) {
               this.ClientEntity = ClientEntity;
               this.MgrEntity = MgrEntity;
               this.CacheEntity = CacheEntity;
               this.startPosition = startPosition;
               this.PatternCalls = new ArrayList<>(PatternCalls);
               
          }
     }
    
    // State machine for pattern matching
    private enum State {
        LOOKING_FOR_REQUEST_CALL,
        LOOKING_FOR_LOOKUP_CALL,
        LOOKING_FOR_OPTIONAL_LOOKUP_CALL,
        LOOKING_FOR_OPTIONAL_UPDATE_CALL,
        PATTERN_FOUND
    }
     
    
    // List to store all call relationships from the trace file
    private static List<CallRelationship> callRelationships = new ArrayList<>();

    //List to store the infos of each detected Occurrence
      public static List<Occurrence> TotalOccurrences = new ArrayList<>();

      //constructor
      public PerformanceTacticParser(InputStream input) {
          this.inputReader = new InputStreamReader(input);
          ReInit(this.inputReader);
          try {
            ExecutionTrace();
            CorrectSyntax = true;
            } catch (ParseException e){
              CorrectSyntax = false;
              }
        }
        
       
     private static void detectPerformanceTactic() {
        // Use a state machine approach for pattern matching
        State currentState = State.LOOKING_FOR_REQUEST_CALL;
        String ClientEntity = null;
        String MgrEntity = null;
        String CacheEntity = null;
        String RepoEntity = null;
        int startPosition = 0;
        int potentialStart = 0;
        boolean opt = false;
        
        List<CallRelationship> patternCalls = new ArrayList<>();        
        CallRelationship opCall = null;
        
        for (int i = 0; i < callRelationships.size(); i++) {
            CallRelationship call = callRelationships.get(i);
            
            switch (currentState) {
                case LOOKING_FOR_REQUEST_CALL:
                    // Step 1:recording caller and callee for future checking
                    if (!call.isSelfCall()) {
                      ClientEntity = call.caller;
                        MgrEntity = call.callee;
                        startPosition = i;
                        patternCalls.clear();
                        patternCalls.add(call);
                        currentState = State.LOOKING_FOR_LOOKUP_CALL;
                    }
                                            
                    break;
                    
                case LOOKING_FOR_LOOKUP_CALL:
                    // Step 2: checking if caller-callee relationship is satisfied with the first method
                    if (call.caller.equals(MgrEntity) && !call.callee.equals(ClientEntity) && !call.isSelfCall()) {
                        CacheEntity = call.callee;
                        patternCalls.add(call);
                        currentState = State.LOOKING_FOR_OPTIONAL_LOOKUP_CALL;
                    } else {
                        // broken pattern, looking for first request call again
                        i = startPosition;
                        currentState = State.LOOKING_FOR_REQUEST_CALL;
                    }
                    if (i == callRelationships.size()-1) {
                      TotalOccurrences.add(new Occurrence(ClientEntity, MgrEntity, CacheEntity, startPosition, patternCalls));                      
                    }
                    break;
                    
                  case LOOKING_FOR_OPTIONAL_LOOKUP_CALL:
                    // Step 3: Look for optional block
                    potentialStart = i;
                    if (call.caller.equals(MgrEntity) && !call.isSelfCall() && !call.callee.equals(ClientEntity) && !call.callee.equals(CacheEntity)){
                        RepoEntity = call.callee;
                        opCall = call;
                        patternCalls.add(opCall);
                        currentState = State.LOOKING_FOR_OPTIONAL_UPDATE_CALL;
                    } else {
                      // necessary block still found, pattern detected
                      TotalOccurrences.add(new Occurrence(ClientEntity, MgrEntity, CacheEntity, startPosition, patternCalls));
                      currentState = State.LOOKING_FOR_REQUEST_CALL;
                      i = --potentialStart;                       
                    }
                   break;
                    
                case LOOKING_FOR_OPTIONAL_UPDATE_CALL:
                    // Step 4: Look for last potential method call
                    currentState = State.PATTERN_FOUND;
                    if (call.caller.equals(MgrEntity) && call.callee.equals(CacheEntity)) {
                        patternCalls.add(call);
                        --i;
                    } else {
                       // necessary block still found, pattern detected
                       patternCalls.remove(opCall);
                       TotalOccurrences.add(new Occurrence(ClientEntity, MgrEntity, CacheEntity, startPosition, patternCalls));
                       currentState = State.LOOKING_FOR_REQUEST_CALL;
                       i = --potentialStart;                    
                    }
                break;

               case PATTERN_FOUND:
                 //opt block was found
                    TotalOccurrences.add(new Occurrence(ClientEntity, MgrEntity, CacheEntity, RepoEntity, startPosition, patternCalls));
                    currentState = State.LOOKING_FOR_REQUEST_CALL;
               break; 
            }
        }
    }
        

		public void buildPrintedContent() {
    		StringBuilder contentBuilder = new StringBuilder();
    
    		// Add number of occurrences
    		contentBuilder.append("Tactic Detected ").append(TotalOccurrences.size()).append(" times\n");

    		// Iterate over the occurrences and add details to the string
    		for (int i = 0; i < TotalOccurrences.size(); i++) {
        		Occurrence occ = TotalOccurrences.get(i);
        		contentBuilder.append("\nOccurrence ").append(i + 1).append(":\n");
        	contentBuilder.append("Client Entity: ").append(occ.ClientEntity).append("\n");
        	contentBuilder.append("CacheMgr Entity: ").append(occ.MgrEntity).append("\n");
        	contentBuilder.append("Cache Entity: ").append(occ.CacheEntity).append("\n");
        	contentBuilder.append("Repository Entity: ").append(occ.RepoEntity).append("\n");

        	int line = occ.startPosition;
        	contentBuilder.append("Tactic started at line: ").append(++line).append("\n\n");

        	for (CallRelationship call : occ.PatternCalls) {
            	contentBuilder.append(line).append(" CALLER:").append(call.caller).append(",METHOD:").append(call.method).append(",CALLEE:").append(call.callee).append(";\n");
           		 line++;
        	 }
    		}
    	 resultOccurrences = contentBuilder.toString();
	}
    
  	 public void parse() {
        try {
            detectPerformanceTactic();
            if (!TotalOccurrences.isEmpty()) {
                tacticFound = true;
                buildPrintedContent();
            } else {
                tacticFound = false;
            }
        } catch (Exception e) {
            tacticFound = false;
        }
    }
    
}
PARSER_END(PerformanceTacticParser)

SKIP : { "\n" | " " | "\t" | "\r" }

TOKEN : { < LITERAL : (["a"-"z", "A"-"Z", "0"-"9", "_"])+ > }

TOKEN : { < CALLER : "CALLER:" > }
TOKEN : { < CALLEE : "CALLEE:" > }
TOKEN : { < METHOD : "METHOD:" > }
TOKEN : { < COMMA : "," > }
TOKEN : { < SEMICOLON : ";" > }

void ExecutionTrace() : 
{
}
{
    (
        CallStatement()
    )*
    <EOF>
}

void CallStatement() : 
{
    Token caller, method, callee;
}
{
    <CALLER> caller = <LITERAL> <COMMA>
    <METHOD> method = <LITERAL> <COMMA>
    <CALLEE> callee = <LITERAL> <SEMICOLON>
    {
        //storing caller, method and callee of each line
        callRelationships.add(new CallRelationship(caller.image, callee.image, method.image));
    }
}
